--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,8 @@ dependencies {
     compileOnly 'javax.servlet:javax.servlet-api:3.1.0'
     compile 'org.webjars:jquery:3.2.0'
     compile 'ch.vorburger.mariaDB4j:mariaDB4j:2.2.3'
+    // https://mvnrepository.com/artifact/jstl/jstl
+    compile group: 'jstl', name: 'jstl', version: '1.2'
     runtime 'org.slf4j:slf4j-simple:1.7.25'
     runtime 'mysql:mysql-connector-java:6.0.6'
 }
